Attempt to fix vertical alignment

--- a/projects/qr-code-component/style.css
+++ b/projects/qr-code-component/style.css
@@ -18,8 +18,8 @@ body {
   width: var(--card-width);
   height: var(--card-height);
   background-color: hsl(0, 0%, 100%);
-  margin-left: calc(50% - var(--card-width)/2);
-  margin-top: 70px;
+  margin-left: calc(50vw - var(--card-width)/2);
+  margin-top: calc(50vh - var(--card-height)/2);
   padding: 15px;
   text-align: center;
   font-family: "Outfit", Arial, sans-serif;
